--- a/.github/workflows/azure-static-web-apps-deploy.yml
+++ b/.github/workflows/azure-static-web-apps-deploy.yml
@@ -19,6 +19,12 @@ jobs:
         with:
           submodules: true
           lfs: false
+
+      - name: Replace App Settings
+        run: |
+          sed -i 's|<TenantId>|${{ secrets.AZURE_AD_TENANT_ID }}|g' src/Client/wwwroot/appsettings.json
+          sed -i 's|<ClientId>|${{ secrets.AZURE_AD_CLIENT_ID }}|g' src/Client/wwwroot/appsettings.json
+
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
